/*
 * Copyright (c) 2019, SimonWorks and/or its affiliates. All rights reserved.
 * SIMONWORKS PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
 */

package org.simonworks.projects.factory;

class BeanCreationException extends RuntimeException {

    public BeanCreationException(String message, Throwable cause) {
        super(message, cause);
    }
}
