@startuml

title __SIMONWORKS-CORE's Class Diagram__\n

  namespace org.simonworks.projects.annotations {
    interface org.simonworks.projects.annotations.Configurable {
    }
  }
  

  namespace org.simonworks.projects.annotations {
    interface org.simonworks.projects.annotations.PostConstructor {
    }
  }
  

  namespace org.simonworks.projects.annotations {
    interface org.simonworks.projects.annotations.Prototype {
    }
  }
  

  namespace org.simonworks.projects.annotations {
    interface org.simonworks.projects.annotations.Singleton {
    }
  }
  

  namespace org.simonworks.projects.configurations {
    class org.simonworks.projects.configurations.ClasspathPropertiesFileConfiguration {
    }
  }
  

  namespace org.simonworks.projects.configurations {
    interface org.simonworks.projects.configurations.Configuration {
    }
  }
  

  namespace org.simonworks.projects.configurations {
    class org.simonworks.projects.configurations.ConfigurationException {
    }
  }
  

  namespace org.simonworks.projects.configurations {
    class org.simonworks.projects.configurations.ExernalPropertyFileConfiguration {
    }
  }
  

  namespace org.simonworks.projects.configurations {
    abstract class org.simonworks.projects.configurations.PropertiesFileConfiguration {
    }
  }
  

  namespace org.simonworks.projects.factory {
    class org.simonworks.projects.factory.BeanCreationException {
    }
  }
  

  namespace org.simonworks.projects.factory {
    interface org.simonworks.projects.factory.BeanCreationPhase {
    }
  }
  

  namespace org.simonworks.projects.factory {
    interface org.simonworks.projects.factory.BeanFactory {
    }
  }
  

  namespace org.simonworks.projects.factory {
    class org.simonworks.projects.factory.ConfigurationPhase {
    }
  }
  

  namespace org.simonworks.projects.factory {
    class org.simonworks.projects.factory.DefaultBeanFactory {
    }
  }
  

  namespace org.simonworks.projects.factory {
    class org.simonworks.projects.factory.PostConstructPhase {
    }
  }
  

  namespace org.simonworks.projects.utils {
    interface org.simonworks.projects.utils.Assertions {
    }
  }
  

  namespace org.simonworks.projects.utils {
    interface org.simonworks.projects.utils.StringUtils {
    }
  }
  

  org.simonworks.projects.configurations.ClasspathPropertiesFileConfiguration -up-|> org.simonworks.projects.configurations.PropertiesFileConfiguration
  org.simonworks.projects.configurations.ExernalPropertyFileConfiguration -up-|> org.simonworks.projects.configurations.PropertiesFileConfiguration
  org.simonworks.projects.configurations.PropertiesFileConfiguration .up.|> org.simonworks.projects.configurations.Configuration
  org.simonworks.projects.factory.ConfigurationPhase .up.|> org.simonworks.projects.factory.BeanCreationPhase
  org.simonworks.projects.factory.DefaultBeanFactory .up.|> org.simonworks.projects.factory.BeanFactory
  org.simonworks.projects.factory.PostConstructPhase .up.|> org.simonworks.projects.factory.BeanCreationPhase


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
